# internal/adapters/repository/postgres/entity/musician.go
@@ -2,17 +2,19 @@ package entity
 
 import (
 	"github.com/google/uuid"
+	"github.com/guregu/null/v5"
 	"github.com/hanoys/sigma-music/internal/domain"
 )
 
 type PgMusician struct {
-	ID          uuid.UUID `db:"id"`
-	Name        string    `db:"name"`
-	Email       string    `db:"email"`
-	Password    string    `db:"password"`
-	Salt        string    `db:"salt"`
-	Country     string    `db:"country"`
-	Description string    `db:"description"`
+	ID          uuid.UUID   `db:"id"`
+	Name        string      `db:"name"`
+	Email       string      `db:"email"`
+	Password    string      `db:"password"`
+	Salt        string      `db:"salt"`
+	Country     string      `db:"country"`
+	Description string      `db:"description"`
+	ImageURL    null.String `db:"image_url"`
 }
 
 func (m *PgMusician) ToDomain() domain.Musician {
@@ -24,6 +26,7 @@ func (m *PgMusician) ToDomain() domain.Musician {
 		Salt:        m.Salt,
 		Country:     m.Country,
 		Description: m.Description,
+		ImageURL:    m.ImageURL,
 	}
 }
 
@@ -36,5 +39,6 @@ func NewPgMusician(musician domain.Musician) PgMusician {
 		Salt:        musician.Salt,
 		Country:     musician.Country,
 		Description: musician.Description,
+		ImageURL:    musician.ImageURL,
 	}
 }
